--- a/styles/header.css
+++ b/styles/header.css
@@ -1,5 +1,5 @@
 header {
-    background-color: var(--negro);
+    background-color: var(--black);
     height: 100vh;
     position: relative;
 }
@@ -9,13 +9,13 @@ header video {
     width: 100%;
 }
 
-header h1#hero {
+header #hero {
     text-align: center;
     position: absolute;
     top: 20%;
     left: 50%;
     transform: translate(-50%, -50%);
-    color: var(--blanco);
+    color: var(--white);
     font-size: 26px;
 }
 
@@ -27,7 +27,7 @@ header a {
     top: 75%;
     left: 50%;
     transform: translate(-50%, -50%);
-    border: solid var(--blanco) 2px;
+    border: solid var(--white) 2px;
     border-radius: 50%;
     text-decoration: none;
 }
@@ -37,8 +37,8 @@ header a:hover {
     transition: top 2s;
 }
 
-header a i.fas.fa-angle-double-down {
-    color: var(--blanco);
+header i.fas.fa-angle-double-down {
+    color: var(--white);
     margin: auto;
     font-size: 1.75rem;
 }
@@ -46,7 +46,7 @@ header a i.fas.fa-angle-double-down {
 /* MQ TABLET */
 
 @media (min-width: 650px) and (max-width: 992px) {
-    header h1#hero {
+    header #hero {
         font-size: 32px;
         top: 40%;
     }
@@ -55,7 +55,7 @@ header a i.fas.fa-angle-double-down {
 /* MQ PC */
 
 @media (min-width: 993px) {
-    header h1#hero {
+    header #hero {
         font-size: 36px;
         top: 50%;
     }
