--- a/styles/reset.css
+++ b/styles/reset.css
@@ -1,32 +1,32 @@
 * {
-    box-sizing: border-box;
-    border: 0;
-    padding: 0;
-    margin: 0;
-    line-height: 1;
-    font-stretch: normal;
-    font-family: 'IBM Plex Sans', sans-serif;
+  border: 0;
+  box-sizing: border-box;
+  font-family: 'IBM Plex Sans', sans-serif;
+  font-stretch: normal;
+  line-height: 1;
+  margin: 0;
+  padding: 0;
 }
 
 html {
-    scroll-behavior: smooth;
-    background-color: #cccccc;
+  background-color: #cccccc;
+  scroll-behavior: smooth;
 }
 
 h1,
 h2,
 h3 {
-    font-family: 'IBM Plex Serif', serif;
-    letter-spacing: 2px;
+  font-family: 'IBM Plex Serif', serif;
+  letter-spacing: 2px;
 }
 
 /* colours */
 :root {
-    --white: #fff;
-    --black: #000;
-    --blue: #C7E8F3;
-    --purple: #BF9ACA;
-    --grey: #41393E;
+  --white: #fff;
+  --black: #000;
+  --blue: #c7e8f3;
+  --purple: #bf9aca;
+  --grey: #41393e;
 }
 
 /* scroll bar style source: https://css-tricks.com/ */
@@ -34,28 +34,29 @@ h3 {
 /* Mozilla Firefox */
 
 html {
-    scrollbar-color: #666 #201c29;
+  scrollbar-color: #666 #201c29;
 }
 
 /*  */
 ::-webkit-scrollbar {
-    width: 16px;
-    height: 16px;
+  height: 16px;
+  width: 16px;
 }
 
 /* track colour */
 ::-webkit-scrollbar-track {
-    background: linear-gradient(90deg, #434343, #434343 1px, #111 0, #111);
+  background: linear-gradient(90deg, #434343, #434343 1px, #111 0, #111);
 }
 
 /* handle */
 ::-webkit-scrollbar-thumb {
-    background: #434343;
-    border-radius: 16px;
-    box-shadow: inset 2px 2px 2px hsla(0, 0%, 100%, .25), inset -2px -2px 2px rgba(0, 0, 0, .25);
+  background: #434343;
+  border-radius: 16px;
+  box-shadow: inset 2px 2px 2px hsla(0, 0%, 100%, 0.25),
+    inset -2px -2px 2px rgba(0, 0, 0, 0.25);
 }
 
 /* handle on hover */
 ::-webkit-scrollbar-thumb:hover {
-    opacity: 0.5;
+  opacity: 0.5;
 }
